# github-osint-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  Makefile  README.md  README_CN.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
app/: agent.py  backend.py  backend_factory.py  llm_config.py  loader.py  log_utils.py  main.py  models.py  redis_client.py
app/alert/: __init__.py  dingtalk.py  discord.py  email.py  feishu.py  notifier.py  slack.py  summarizer.py
app/database/: __init__.py  base.py  tables.py
app/database/dao/: __init__.py  alert_channel_dao.py  finding_dao.py  scan_history_dao.py  scan_report_dao.py  scan_subtask_dao.py  scan_task_dao.py  scheduled_task_dao.py
app/middleware/: __init__.py  tool_error_handler.py
app/progress/: __init__.py  progress_tracker.py  scheduled_task_tracker.py
app/routes/: __init__.py  channel.py  download.py  findings.py  scanner.py  scheduled_task.py
app/scanner/: __init__.py  base_scanner.py  batch_tools.py  configurable_scanner.py  deep_scanner.py  hybrid_scanner.py  light_scanner.py  rate_limiter.py  report_generator.py  scan_config.py  scan_orchestrator.py  standard_scanner.py
app/scanner/modules/: __init__.py  community_scanner.py  cve_scanner.py  enhanced_secret_scanner.py  license_scanner.py  llm_analyzer.py  secret_scanner.py
app/scheduler/: __init__.py  sandbox_pool.py  scheduler.py  scheduler_agent.py
app/services/: __init__.py  scan_lock.py
app/tools/: __init__.py  common.py  dingtalk_tools.py  report.py  scheduler_tools.py  skill_management.py  unified.py
app/utils/: __init__.py  dep_parser.py  osv_client.py  secret_filter.py  session.py  severity_mapper.py  sse_manager.py
docker/: Dockerfile.sandbox  build.sh
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue
frontend/src/api/: chat.js  dashboard.js
frontend/src/components/: AlertChannel.vue  AlertList.vue  ChatArea.vue  Dashboard.vue  InputArea.vue  MarkdownRenderer.vue  MessageItem.vue  OrgConfig.vue  RepoStatusPanel.vue  ScheduledTask.vue  Sidebar.vue
frontend/src/styles/: main.css
scripts/: init_db.sql  init_tables.py  init_tables_sync.py  migrations.sql
skills/community/contributor-stats/: SKILL.md  analyze.py
skills/compliance/license-checker/: SKILL.md  check.py
skills/main/skill-management/: SKILL.md
skills/security/vuln-scanner/: SKILL.md  analyze.py
skills/trend/repo-trend-analysis/: SKILL.md  (+1 more)
subagents/: community-analyzer.yaml  compliance-analyzer.yaml  security-analyzer.yaml  trend-analyzer.yaml
tests/: conftest.py  test_alerts.py  test_osv_client.py  test_severity_mapper.py
(+3 files in other folders)
