[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-osint-agent"
version = "1.0.0"
description = "An intelligent multi-agent OSINT system for automated GitHub repository security scanning and analysis"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "miaomiaoLmm", email = "your.email@example.com"}
]
maintainers = [
    {name = "miaomiaoLmm"}
]
keywords = [
    "osint",
    "github",
    "security",
    "vulnerability",
    "cve",
    "langgraph",
    "agent",
    "multi-agent",
    "ai",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Security Professionals",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development",
    "Framework :: FastAPI",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "PyGithub>=2.1.1",
    "aiohttp>=3.9.1",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "requests>=2.31.0",
    "pydantic>=2.12.5",
    "apscheduler>=3.10.0",
    "croniter>=2.0.0",
    "openai>=1.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
mysql = [
    "langgraph-checkpoint-mysql[aiomysql]>=3.0.0",
    "asyncmy>=0.2.9",
]

[project.urls]
Homepage = "https://github.com/mumu-develop/github-osint-agent"
Documentation = "https://github.com/mumu-develop/github-osint-agent#readme"
Repository = "https://github.com/mumu-develop/github-osint-agent.git"
Issues = "https://github.com/mumu-develop/github-osint-agent/issues"
Changelog = "https://github.com/mumu-develop/github-osint-agent/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py312"]
line-length = 120